--- a/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
+++ b/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
@@ -1,8 +1,36 @@
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+<div class="table-responsive">
+      <table class="table">
+            <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Nombre</th>
+                    <th>Segundo Nombre</th>
+                    <th>Apellido</th>
+                    <th>Segundo Apellido</th>
+                    <th>Grado</th>
+                    <th>Telefono</th>
+                    <th>Encargado</th>
+                  </tr>
+                </thead>
+      </table>
+    </div>
 
 
 {% for student in student_table %}
-      {{student}}
+      <tr>
+            <td>{{student.student_id}} </td>
+            <td>{{student.student_name}} </td>
+            <td>{{student.student_middlename}} </td>
+            <td>{{student.student_lastname}} </td>
+            <td>{{student.student_2ndlastname}} </td>
+            <td>{{student.student_grade}} </td>
+            <td>{{student.student_phone}} </td>
+            <td>{{student.student_guardian}} </td>
+      
+      </tr>
 {% endfor %}
 
