--- a/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
+++ b/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
@@ -2,9 +2,9 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
 
-<div class="table-responsive">
+<div class="table-responsive table-striped">
       <table class="table">
-            <thead>
+            <thead class = "thead-inverse">
                   <tr>
                     <th>ID</th>
                     <th>Nombre</th>
