--- a/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
+++ b/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
 
-<div class="table-responsive table-striped">
-      <table class="table">
+<div>
+      <table class = "table-responsive table-striped">
             <thead class = "thead-inverse">
                   <tr>
                     <th>ID</th>
