--- a/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
+++ b/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
@@ -1,5 +1,9 @@
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+<!DOCTYPE html>
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 
 
 <div>
@@ -13,7 +17,6 @@
                     <th>Segundo Apellido</th>
                     <th>Grado</th>
                     <th>Telefono</th>
-                    <th>Encargado</th>
                   </tr>
                 </thead>
       
@@ -28,9 +31,7 @@
             <td>{{student.student_lastname}} </td>
             <td>{{student.student_2ndlastname}} </td>
             <td>{{student.student_grade}} </td>
-            <td>{{student.student_phone}} </td>
-            <td>{{student.student_guardian}} </td>
-      
+            <td>{{student.student_phone}} </td>>
       </tr>
 {% endfor %}
 
