--- a/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
+++ b/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
@@ -1,13 +1,14 @@
 
 <!DOCTYPE html>
 
+<html lang="en"></html>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 
 
 <div>
-      <table class = "table-responsive table-striped">
+      <table class = "table-responsive table-striped table-hover">
             <thead class = "thead-inverse">
                   <tr>
                     <th>ID</th>
@@ -37,3 +38,4 @@
 
 </table>
 </div>
+</html>
