pythonanywhere db move

--- a/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
+++ b/LiftingEnkiMatriculas/templates/LiftingEnkiMatriculas/table_template.html
@@ -32,7 +32,7 @@
             <td>{{student.student_lastname}} </td>
             <td>{{student.student_2ndlastname}} </td>
             <td>{{student.student_grade}} </td>
-            <td>{{student.student_phone}} </td>>
+            <td>{{student.student_phone}} </td>
       </tr>
 {% endfor %}
 
